# Chess-Project

./: CMakeLists.txt  README.md
include/: Color.h  Position.h  board.h  movetables.h  pawn.h  piece.h
src/: pawn.cpp  piece.cpp
